# fast_text_proc

./: Cargo.toml  README.md  ci.yml  main.py  pyproject.toml
benchmark/: bench.py
flycheck0/: stderr  stdout
src/: core.rs  lib.rs  parallel.rs
tests/: test_python.py  tests.rs
